zu_parser.output
   0  $accept : function_definition $end

   1  function_definition : decls

   2  list : stmt
   3       | list stmt
   4       | list ',' stmt

   5  stmt : expr ';'
   6       | expr '!'
   7       | expr tPRINT
   8       | tRETURN
   9       | tCONTINUE
  10       | tBREAK
  11       | '[' expr ']' '#' stmt
  12       | '[' expr ']' '?' stmt
  13       | '[' expr ']' '?' stmt ':' stmt
  14       | '[' ';' ';' ']' stmt
  15       | '[' ';' ';' exprs ']' stmt
  16       | '[' ';' exprs ';' exprs ']' stmt
  17       | '[' ';' exprs ';' ']' stmt
  18       | '[' varsfor ';' ';' ']' stmt
  19       | '[' varsfor ';' ';' exprs ']' stmt
  20       | '[' varsfor ';' exprs ';' ']' stmt
  21       | '[' varsfor ';' exprs ';' exprs ']' stmt
  22       | '[' exprs ';' exprs ';' exprs ']' stmt
  23       | block

  24  type : '#'
  25       | '%'
  26       | '$'
  27       | '!'
  28       | '<' type '>'

  29  block : '{' '}'
  30        | '{' list '}'
  31        | '{' varsblock '}'
  32        | '{' varsblock list '}'

  33  string : tSTRING
  34         | tSTRING string

  35  exprs : expr
  36        | exprs ',' expr

  37  expr : tINTEGER
  38       | string
  39       | tDOUBLE
  40       | '~' expr
  41       | '-' expr
  42       | '+' expr
  43       | '@'
  44       | lval '?'
  45       | expr '+' expr
  46       | expr '-' expr
  47       | expr '*' expr
  48       | expr '/' expr
  49       | expr '%' expr
  50       | expr '<' expr
  51       | expr '>' expr
  52       | expr '&' expr
  53       | expr '|' expr
  54       | expr tGE expr
  55       | expr tLE expr
  56       | expr tNE expr
  57       | expr tEQ expr
  58       | tIDENTIFIER '(' ')'
  59       | tIDENTIFIER '(' exprs ')'
  60       | '(' expr ')'
  61       | '[' expr ']'
  62       | lval
  63       | lval '=' expr

  64  vardecl : varblock ';'

  65  varsblock : vardecl
  66            | varsblock vardecl

  67  varsfor : varblock
  68          | varsfor ',' varblock

  69  varblock : type tIDENTIFIER
  70           | type tIDENTIFIER '!'
  71           | type tIDENTIFIER '?'
  72           | type tIDENTIFIER '=' expr
  73           | type tIDENTIFIER '?' '=' expr
  74           | type tIDENTIFIER '!' '=' expr

  75  var : type tIDENTIFIER
  76      | type tIDENTIFIER '=' expr
  77      | type tIDENTIFIER '!' '=' expr

  78  decls : decl
  79        | decls decl

  80  decl : var ';'
  81       | type tIDENTIFIER '?' '(' ')'
  82       | type tIDENTIFIER '!' '(' ')'
  83       | type tIDENTIFIER '!' '(' ')' block
  84       | type tIDENTIFIER '?' '(' ')' block
  85       | type tIDENTIFIER '!' '(' ')' '=' expr
  86       | type tIDENTIFIER '?' '(' ')' '=' expr
  87       | type tIDENTIFIER '!' '(' ')' '=' expr block
  88       | type tIDENTIFIER '?' '(' ')' '=' expr block
  89       | type tIDENTIFIER '!' '(' varsfor ')'
  90       | type tIDENTIFIER '?' '(' varsfor ')'
  91       | type tIDENTIFIER '!' '(' varsfor ')' block
  92       | type tIDENTIFIER '?' '(' varsfor ')' block
  93       | type tIDENTIFIER '!' '(' varsfor ')' '=' expr
  94       | type tIDENTIFIER '?' '(' varsfor ')' '=' expr
  95       | type tIDENTIFIER '!' '(' varsfor ')' '=' expr block
  96       | type tIDENTIFIER '?' '(' varsfor ')' '=' expr block
  97       | type tIDENTIFIER '(' ')'
  98       | type tIDENTIFIER '(' ')' block
  99       | type tIDENTIFIER '(' ')' '=' expr
 100       | type tIDENTIFIER '(' ')' '=' expr block
 101       | type tIDENTIFIER '(' varsfor ')'
 102       | type tIDENTIFIER '(' varsfor ')' block
 103       | type tIDENTIFIER '(' varsfor ')' '=' expr
 104       | type tIDENTIFIER '(' varsfor ')' '=' expr block

 105  lval : tIDENTIFIER
 106       | expr '[' expr ']'
 107       | '(' expr ')' '[' expr ']'

state 0
	$accept : . function_definition $end  (0)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	.  error

	function_definition  goto 6
	decl  goto 7
	decls  goto 8
	var  goto 9
	type  goto 10


state 1
	type : '<' . type '>'  (28)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	.  error

	type  goto 11


state 2
	type : '%' .  (25)

	.  reduce 25


state 3
	type : '!' .  (27)

	.  reduce 27


state 4
	type : '#' .  (24)

	.  reduce 24


state 5
	type : '$' .  (26)

	.  reduce 26


state 6
	$accept : function_definition . $end  (0)

	$end  accept


state 7
	decls : decl .  (78)

	.  reduce 78


state 8
	function_definition : decls .  (1)
	decls : decls . decl  (79)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	$end  reduce 1

	decl  goto 12
	var  goto 9
	type  goto 10


state 9
	decl : var . ';'  (80)

	';'  shift 13
	.  error


state 10
	var : type . tIDENTIFIER  (75)
	var : type . tIDENTIFIER '=' expr  (76)
	var : type . tIDENTIFIER '!' '=' expr  (77)
	decl : type . tIDENTIFIER '?' '(' ')'  (81)
	decl : type . tIDENTIFIER '!' '(' ')'  (82)
	decl : type . tIDENTIFIER '!' '(' ')' block  (83)
	decl : type . tIDENTIFIER '?' '(' ')' block  (84)
	decl : type . tIDENTIFIER '!' '(' ')' '=' expr  (85)
	decl : type . tIDENTIFIER '?' '(' ')' '=' expr  (86)
	decl : type . tIDENTIFIER '!' '(' ')' '=' expr block  (87)
	decl : type . tIDENTIFIER '?' '(' ')' '=' expr block  (88)
	decl : type . tIDENTIFIER '!' '(' varsfor ')'  (89)
	decl : type . tIDENTIFIER '?' '(' varsfor ')'  (90)
	decl : type . tIDENTIFIER '!' '(' varsfor ')' block  (91)
	decl : type . tIDENTIFIER '?' '(' varsfor ')' block  (92)
	decl : type . tIDENTIFIER '!' '(' varsfor ')' '=' expr  (93)
	decl : type . tIDENTIFIER '?' '(' varsfor ')' '=' expr  (94)
	decl : type . tIDENTIFIER '!' '(' varsfor ')' '=' expr block  (95)
	decl : type . tIDENTIFIER '?' '(' varsfor ')' '=' expr block  (96)
	decl : type . tIDENTIFIER '(' ')'  (97)
	decl : type . tIDENTIFIER '(' ')' block  (98)
	decl : type . tIDENTIFIER '(' ')' '=' expr  (99)
	decl : type . tIDENTIFIER '(' ')' '=' expr block  (100)
	decl : type . tIDENTIFIER '(' varsfor ')'  (101)
	decl : type . tIDENTIFIER '(' varsfor ')' block  (102)
	decl : type . tIDENTIFIER '(' varsfor ')' '=' expr  (103)
	decl : type . tIDENTIFIER '(' varsfor ')' '=' expr block  (104)

	tIDENTIFIER  shift 14
	.  error


state 11
	type : '<' type . '>'  (28)

	'>'  shift 15
	.  error


state 12
	decls : decls decl .  (79)

	.  reduce 79


state 13
	decl : var ';' .  (80)

	.  reduce 80


state 14
	var : type tIDENTIFIER .  (75)
	var : type tIDENTIFIER . '=' expr  (76)
	var : type tIDENTIFIER . '!' '=' expr  (77)
	decl : type tIDENTIFIER . '?' '(' ')'  (81)
	decl : type tIDENTIFIER . '!' '(' ')'  (82)
	decl : type tIDENTIFIER . '!' '(' ')' block  (83)
	decl : type tIDENTIFIER . '?' '(' ')' block  (84)
	decl : type tIDENTIFIER . '!' '(' ')' '=' expr  (85)
	decl : type tIDENTIFIER . '?' '(' ')' '=' expr  (86)
	decl : type tIDENTIFIER . '!' '(' ')' '=' expr block  (87)
	decl : type tIDENTIFIER . '?' '(' ')' '=' expr block  (88)
	decl : type tIDENTIFIER . '!' '(' varsfor ')'  (89)
	decl : type tIDENTIFIER . '?' '(' varsfor ')'  (90)
	decl : type tIDENTIFIER . '!' '(' varsfor ')' block  (91)
	decl : type tIDENTIFIER . '?' '(' varsfor ')' block  (92)
	decl : type tIDENTIFIER . '!' '(' varsfor ')' '=' expr  (93)
	decl : type tIDENTIFIER . '?' '(' varsfor ')' '=' expr  (94)
	decl : type tIDENTIFIER . '!' '(' varsfor ')' '=' expr block  (95)
	decl : type tIDENTIFIER . '?' '(' varsfor ')' '=' expr block  (96)
	decl : type tIDENTIFIER . '(' ')'  (97)
	decl : type tIDENTIFIER . '(' ')' block  (98)
	decl : type tIDENTIFIER . '(' ')' '=' expr  (99)
	decl : type tIDENTIFIER . '(' ')' '=' expr block  (100)
	decl : type tIDENTIFIER . '(' varsfor ')'  (101)
	decl : type tIDENTIFIER . '(' varsfor ')' block  (102)
	decl : type tIDENTIFIER . '(' varsfor ')' '=' expr  (103)
	decl : type tIDENTIFIER . '(' varsfor ')' '=' expr block  (104)

	'='  shift 16
	'?'  shift 17
	'('  shift 18
	'!'  shift 19
	';'  reduce 75


state 15
	type : '<' type '>' .  (28)

	.  reduce 28


state 16
	var : type tIDENTIFIER '=' . expr  (76)

	tINTEGER  shift 20
	tDOUBLE  shift 21
	tIDENTIFIER  shift 22
	tSTRING  shift 23
	'~'  shift 24
	'+'  shift 25
	'-'  shift 26
	'('  shift 27
	'['  shift 28
	'@'  shift 29
	.  error

	string  goto 30
	expr  goto 31
	lval  goto 32


state 17
	decl : type tIDENTIFIER '?' . '(' ')'  (81)
	decl : type tIDENTIFIER '?' . '(' ')' block  (84)
	decl : type tIDENTIFIER '?' . '(' ')' '=' expr  (86)
	decl : type tIDENTIFIER '?' . '(' ')' '=' expr block  (88)
	decl : type tIDENTIFIER '?' . '(' varsfor ')'  (90)
	decl : type tIDENTIFIER '?' . '(' varsfor ')' block  (92)
	decl : type tIDENTIFIER '?' . '(' varsfor ')' '=' expr  (94)
	decl : type tIDENTIFIER '?' . '(' varsfor ')' '=' expr block  (96)

	'('  shift 33
	.  error


state 18
	decl : type tIDENTIFIER '(' . ')'  (97)
	decl : type tIDENTIFIER '(' . ')' block  (98)
	decl : type tIDENTIFIER '(' . ')' '=' expr  (99)
	decl : type tIDENTIFIER '(' . ')' '=' expr block  (100)
	decl : type tIDENTIFIER '(' . varsfor ')'  (101)
	decl : type tIDENTIFIER '(' . varsfor ')' block  (102)
	decl : type tIDENTIFIER '(' . varsfor ')' '=' expr  (103)
	decl : type tIDENTIFIER '(' . varsfor ')' '=' expr block  (104)

	'<'  shift 1
	'%'  shift 2
	')'  shift 34
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	.  error

	varsfor  goto 35
	varblock  goto 36
	type  goto 37


state 19
	var : type tIDENTIFIER '!' . '=' expr  (77)
	decl : type tIDENTIFIER '!' . '(' ')'  (82)
	decl : type tIDENTIFIER '!' . '(' ')' block  (83)
	decl : type tIDENTIFIER '!' . '(' ')' '=' expr  (85)
	decl : type tIDENTIFIER '!' . '(' ')' '=' expr block  (87)
	decl : type tIDENTIFIER '!' . '(' varsfor ')'  (89)
	decl : type tIDENTIFIER '!' . '(' varsfor ')' block  (91)
	decl : type tIDENTIFIER '!' . '(' varsfor ')' '=' expr  (93)
	decl : type tIDENTIFIER '!' . '(' varsfor ')' '=' expr block  (95)

	'='  shift 38
	'('  shift 39
	.  error


state 20
	expr : tINTEGER .  (37)

	.  reduce 37


state 21
	expr : tDOUBLE .  (39)

	.  reduce 39


state 22
	expr : tIDENTIFIER . '(' ')'  (58)
	expr : tIDENTIFIER . '(' exprs ')'  (59)
	lval : tIDENTIFIER .  (105)

	'('  shift 40
	$end  reduce 105
	tPRINT  reduce 105
	'='  reduce 105
	'|'  reduce 105
	'&'  reduce 105
	tEQ  reduce 105
	tNE  reduce 105
	'<'  reduce 105
	'>'  reduce 105
	tGE  reduce 105
	tLE  reduce 105
	'+'  reduce 105
	'-'  reduce 105
	'*'  reduce 105
	'/'  reduce 105
	'%'  reduce 105
	'?'  reduce 105
	')'  reduce 105
	'['  reduce 105
	']'  reduce 105
	','  reduce 105
	';'  reduce 105
	'!'  reduce 105
	'#'  reduce 105
	'$'  reduce 105
	'{'  reduce 105


state 23
	string : tSTRING .  (33)
	string : tSTRING . string  (34)

	tSTRING  shift 23
	$end  reduce 33
	tPRINT  reduce 33
	'|'  reduce 33
	'&'  reduce 33
	tEQ  reduce 33
	tNE  reduce 33
	'<'  reduce 33
	'>'  reduce 33
	tGE  reduce 33
	tLE  reduce 33
	'+'  reduce 33
	'-'  reduce 33
	'*'  reduce 33
	'/'  reduce 33
	'%'  reduce 33
	')'  reduce 33
	'['  reduce 33
	']'  reduce 33
	','  reduce 33
	';'  reduce 33
	'!'  reduce 33
	'#'  reduce 33
	'$'  reduce 33
	'{'  reduce 33

	string  goto 41


state 24
	expr : '~' . expr  (40)

	tINTEGER  shift 20
	tDOUBLE  shift 21
	tIDENTIFIER  shift 22
	tSTRING  shift 23
	'~'  shift 24
	'+'  shift 25
	'-'  shift 26
	'('  shift 27
	'['  shift 28
	'@'  shift 29
	.  error

	string  goto 30
	expr  goto 42
	lval  goto 32


state 25
	expr : '+' . expr  (42)

	tINTEGER  shift 20
	tDOUBLE  shift 21
	tIDENTIFIER  shift 22
	tSTRING  shift 23
	'~'  shift 24
	'+'  shift 25
	'-'  shift 26
	'('  shift 27
	'['  shift 28
	'@'  shift 29
	.  error

	string  goto 30
	expr  goto 43
	lval  goto 32


state 26
	expr : '-' . expr  (41)

	tINTEGER  shift 20
	tDOUBLE  shift 21
	tIDENTIFIER  shift 22
	tSTRING  shift 23
	'~'  shift 24
	'+'  shift 25
	'-'  shift 26
	'('  shift 27
	'['  shift 28
	'@'  shift 29
	.  error

	string  goto 30
	expr  goto 44
	lval  goto 32


state 27
	expr : '(' . expr ')'  (60)
	lval : '(' . expr ')' '[' expr ']'  (107)

	tINTEGER  shift 20
	tDOUBLE  shift 21
	tIDENTIFIER  shift 22
	tSTRING  shift 23
	'~'  shift 24
	'+'  shift 25
	'-'  shift 26
	'('  shift 27
	'['  shift 28
	'@'  shift 29
	.  error

	string  goto 30
	expr  goto 45
	lval  goto 32


state 28
	expr : '[' . expr ']'  (61)

	tINTEGER  shift 20
	tDOUBLE  shift 21
	tIDENTIFIER  shift 22
	tSTRING  shift 23
	'~'  shift 24
	'+'  shift 25
	'-'  shift 26
	'('  shift 27
	'['  shift 28
	'@'  shift 29
	.  error

	string  goto 30
	expr  goto 46
	lval  goto 32


state 29
	expr : '@' .  (43)

	.  reduce 43


state 30
	expr : string .  (38)

	.  reduce 38


state 31
	expr : expr . '+' expr  (45)
	expr : expr . '-' expr  (46)
	expr : expr . '*' expr  (47)
	expr : expr . '/' expr  (48)
	expr : expr . '%' expr  (49)
	expr : expr . '<' expr  (50)
	expr : expr . '>' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . '|' expr  (53)
	expr : expr . tGE expr  (54)
	expr : expr . tLE expr  (55)
	expr : expr . tNE expr  (56)
	expr : expr . tEQ expr  (57)
	var : type tIDENTIFIER '=' expr .  (76)
	lval : expr . '[' expr ']'  (106)

	'|'  shift 47
	'&'  shift 48
	tEQ  shift 49
	tNE  shift 50
	'<'  shift 51
	'>'  shift 52
	tGE  shift 53
	tLE  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	'['  shift 60
	';'  reduce 76


state 32
	expr : lval . '?'  (44)
	expr : lval .  (62)
	expr : lval . '=' expr  (63)

	'='  shift 61
	'?'  shift 62
	$end  reduce 62
	tPRINT  reduce 62
	'|'  reduce 62
	'&'  reduce 62
	tEQ  reduce 62
	tNE  reduce 62
	'<'  reduce 62
	'>'  reduce 62
	tGE  reduce 62
	tLE  reduce 62
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	'%'  reduce 62
	')'  reduce 62
	'['  reduce 62
	']'  reduce 62
	','  reduce 62
	';'  reduce 62
	'!'  reduce 62
	'#'  reduce 62
	'$'  reduce 62
	'{'  reduce 62


state 33
	decl : type tIDENTIFIER '?' '(' . ')'  (81)
	decl : type tIDENTIFIER '?' '(' . ')' block  (84)
	decl : type tIDENTIFIER '?' '(' . ')' '=' expr  (86)
	decl : type tIDENTIFIER '?' '(' . ')' '=' expr block  (88)
	decl : type tIDENTIFIER '?' '(' . varsfor ')'  (90)
	decl : type tIDENTIFIER '?' '(' . varsfor ')' block  (92)
	decl : type tIDENTIFIER '?' '(' . varsfor ')' '=' expr  (94)
	decl : type tIDENTIFIER '?' '(' . varsfor ')' '=' expr block  (96)

	'<'  shift 1
	'%'  shift 2
	')'  shift 63
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	.  error

	varsfor  goto 64
	varblock  goto 36
	type  goto 37


state 34
	decl : type tIDENTIFIER '(' ')' .  (97)
	decl : type tIDENTIFIER '(' ')' . block  (98)
	decl : type tIDENTIFIER '(' ')' . '=' expr  (99)
	decl : type tIDENTIFIER '(' ')' . '=' expr block  (100)

	'='  shift 65
	'{'  shift 66
	$end  reduce 97
	'<'  reduce 97
	'%'  reduce 97
	'!'  reduce 97
	'#'  reduce 97
	'$'  reduce 97

	block  goto 67


state 35
	varsfor : varsfor . ',' varblock  (68)
	decl : type tIDENTIFIER '(' varsfor . ')'  (101)
	decl : type tIDENTIFIER '(' varsfor . ')' block  (102)
	decl : type tIDENTIFIER '(' varsfor . ')' '=' expr  (103)
	decl : type tIDENTIFIER '(' varsfor . ')' '=' expr block  (104)

	')'  shift 68
	','  shift 69
	.  error


state 36
	varsfor : varblock .  (67)

	.  reduce 67

